# semantic-data-portal

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  constraints-graph.txt  docker-compose.yml  fuzz-requirements.txt  pyproject.toml  requirements-dev.txt  requirements-graph.txt  requirements-test.in  requirements-test.txt  requirements.txt
.clusterfuzzlite/: Dockerfile
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: fuzz.yml  opencode-review.yml  scorecard-analysis.yml  strix.yml  tests.yml
docker/: entrypoint.sh  postgres-age-pgvector.Dockerfile
docs/: design-tokens.md  enterprise-readiness.md  implementation-compliance.md  prd-trd.md  retrigger-evidence.md
docs/papers/: README.md
docs/superpowers/plans/: 2026-07-21-semantic-file-ontology.md
docs/superpowers/specs/: 2026-07-21-semantic-file-ontology-design.md
fuzz/: fuzz_query_safety.py
migrations/: 0001_init_graph_vector.sql  run_migrations.py
ontology/: cwl-file-profile.ttl  cwl-file-shapes.ttl
src/sdp/: __init__.py  api.py  authz.py  browse.py  catalog.py  config.py  connectors.py  console.py  credentials.py  demo_smoke.py  design_tokens.py  document_semantics.py  domain.py  embeddings.py  enterprise_evidence.py  evidence.py  file_ontology.py  file_pilot.py  graph_models.py  graph_store.py  observability.py  ontology.py  orchestrator.py  policy.py  seed.py  semantic_validation.py  steward_review.py  storage_readers.py
src/sdp/resources/: cwl-file-profile.ttl  cwl-file-shapes.ttl
src/sdp_core/: __init__.py  contracts.py  demo_seed.py  enterprise.py  kpis.py  production.py  rbac.py  readiness.py  stores.py
tests/: test_api.py  test_design_tokens.py  test_file_knowledge.py  test_graph_engine.py  test_graph_security.py  test_integration_age.py  test_migrations.py
tests/fuzz/: README.md  __init__.py  invariants.py  run_atheris.sh  test_fuzz_properties.py
tests/fuzz/atheris/: fuzz_draft_sql.py  fuzz_execute_query.py  fuzz_resolve_terms.py  fuzz_search_catalog.py
tests/fuzz/corpus/: .gitignore
tests/fuzz/corpus/draft_sql/: seed_forbidden.txt  seed_groupby.txt  seed_question.txt
tests/fuzz/corpus/execute_query/: seed_multi.txt  seed_select.txt
tests/fuzz/corpus/resolve_terms/: seed_active_customers.txt  seed_english.txt  seed_injection.txt  seed_revenue.txt
tests/fuzz/corpus/search_catalog/: seed_churn.txt  seed_regex_meta.txt  seed_wildcards.txt
