[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-data-portal"
version = "0.1.0"
description = "Ontology-driven semantic data catalog and browsing platform (MVP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.139.0",
  "psycopg[binary]==3.3.4",
  "PyJWT[crypto]==2.13.0",
  "pydantic==2.13.4",
  "uvicorn==0.51.0",
]

[project.optional-dependencies]
dev = ["pytest==9.1.1", "httpx==0.28.1"]

[tool.pytest.ini_options]
addopts = "-q"
