[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-data-portal"
version = "0.3.0"
description = "Ontology-driven, graph-backed semantic data catalog with vector retrieval"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.139.0",
  "psycopg[binary]==3.3.4",
  "PyJWT[crypto]==2.13.0",
  "pydantic==2.13.4",
  "pypdf==6.14.2",
  "pyshacl==0.40.0",
  "uvicorn==0.51.0",
]

[tool.setuptools.package-data]
sdp = ["resources/*.ttl"]

[project.optional-dependencies]
# Postgres + Apache AGE (openCypher) + pgvector backend for the graph engine.
graph = [
  "SQLAlchemy>=2.0.0",
  "psycopg[binary]>=3.1.0",
]
dev = [
  "pytest==9.1.1",
  "httpx==0.28.1",
  "hypothesis>=6.100.0",
  "SQLAlchemy>=2.0.0",
  "psycopg[binary]>=3.1.0",
]
# Hypothesis (MPL-2.0) property tests run as part of the normal suite, so it is
# a dev dependency. Atheris lives in the separate `fuzz` extra because the
# coverage-guided runtime only supports CPython 3.6-3.12.
fuzz = ["hypothesis>=6.100.0", "atheris>=2.3.0; python_version < '3.13'"]

[tool.pytest.ini_options]
addopts = "-q"
markers = [
  "integration: requires a live Postgres with Apache AGE + pgvector (SDP_DATABASE_DSN)",
]
# fuzz_*.py under tests/fuzz/atheris are standalone libFuzzer harnesses, not
# pytest modules. Belt-and-braces: they are also named fuzz_* (not test_*), so
# the default collection ignores them; this keeps the corpus/harness dirs out of
# recursion too. The list extends the pytest defaults.
norecursedirs = [
  "*.egg", ".*", "_darcs", "build", "CVS", "dist", "node_modules", "venv",
  "{arch}", "tests/fuzz/atheris", "tests/fuzz/corpus",
]
